Updated: The-Agent-Ledger .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,98 +1,161 @@
-# =============================================================================
-# The Agentic Ledger - Environment Configuration
-# =============================================================================
-# Copy this file to .env and fill in your values:
-#   cp .env.example .env
-# =============================================================================
+# The Agentic Ledger - Environment Variables
 
-# -----------------------------------------------------------------------------
-# Required
-# -----------------------------------------------------------------------------
+# Required: OpenAI API Key
+OPENAI_API_KEY=sk-your-openai-api-key
 
-# OpenAI API key (used for GPT-4o, TTS, and embeddings)
-OPENAI_API_KEY=sk-your-key-here
+# Paths (defaults shown)
+OUTPUT_DIR=output
+ASSETS_DIR=assets
+TEMP_DIR=temp
 
-# -----------------------------------------------------------------------------
-# RSS Feed Bundles (Google Alerts → arXiv category mapping)
-# -----------------------------------------------------------------------------
-# JSON array of feed bundles. Each bundle links RSS feeds to arXiv categories.
-# Run `python -m src.main --lexicon` to generate Google Alerts queries.
-#
-# Example:
-# RSS_FEED_BUNDLES='[
-#   {
-#     "name": "AI Systems",
-#     "feed_urls": ["https://www.google.com/alerts/feeds/..."],
-#     "arxiv_codes": ["cs.AI", "cs.LG"],
-#     "priority": 10,
-#     "enabled": true
-#   },
-#   {
-#     "name": "Cybersecurity",
-#     "feed_urls": ["https://www.google.com/alerts/feeds/..."],
-#     "arxiv_codes": ["cs.CR"],
-#     "priority": 8,
-#     "enabled": true
-#   }
-# ]'
-RSS_FEED_BUNDLES=
+# ===========================================
+# RSS Feed Bundles Configuration
+# ===========================================
+# JSON array of feed bundles, each with category alignment
+# Each bundle groups related RSS feeds and links to arXiv categories
+# This enables "upstream convergence" - news sources aligned with research
 
-# -----------------------------------------------------------------------------
-# LLM & TTS Models
-# -----------------------------------------------------------------------------
-LLM_MODEL=gpt-4o
-TTS_MODEL=gpt-4o-mini-tts
+RSS_FEED_BUNDLES='[
+  {
+    "name": "AI Systems",
+    "description": "Artificial intelligence and machine learning news",
+    "arxiv_codes": ["cs.AI", "cs.LG", "cs.NE", "cs.MA", "cs.CL"],
+    "priority": 10,
+    "feed_urls": [
+      "https://www.google.com/alerts/feeds/.../ai-agents",
+      "https://www.google.com/alerts/feeds/.../llm-news",
+      "https://www.google.com/alerts/feeds/.../multimodal-ai"
+    ]
+  },
+  {
+    "name": "Cybersecurity",
+    "description": "Security, cryptography, and privacy news",
+    "arxiv_codes": ["cs.CR"],
+    "priority": 8,
+    "feed_urls": [
+      "https://www.google.com/alerts/feeds/.../zero-trust",
+      "https://www.google.com/alerts/feeds/.../ransomware",
+      "https://www.google.com/alerts/feeds/.../blockchain-security"
+    ]
+  },
+  {
+    "name": "Market Microstructure",
+    "description": "Trading, HFT, and market structure news",
+    "arxiv_codes": ["q-fin.TR", "q-fin.PM", "q-fin.RM", "q-fin.CP"],
+    "priority": 9,
+    "feed_urls": [
+      "https://www.google.com/alerts/feeds/.../algorithmic-trading",
+      "https://www.google.com/alerts/feeds/.../market-making",
+      "https://www.google.com/alerts/feeds/.../quantitative-finance"
+    ]
+  },
+  {
+    "name": "Distributed Systems",
+    "description": "Distributed computing and consensus protocols",
+    "arxiv_codes": ["cs.DC", "cs.GT"],
+    "priority": 6,
+    "feed_urls": [
+      "https://www.google.com/alerts/feeds/.../consensus-protocols",
+      "https://www.google.com/alerts/feeds/.../distributed-ledger"
+    ]
+  }
+]'
+
+RSS_FETCH_LIMIT=20
+RSS_CACHE_TTL_MINUTES=30
+
+# ===========================================
+# arXiv Configuration
+# ===========================================
+# Categories: cs.CR (Cryptography), q-fin.TR (Trading), cs.AI, cs.LG (Machine Learning)
+ARXIV_CATEGORIES=["cs.CR", "q-fin.TR", "cs.AI", "cs.LG"]
+ARXIV_MAX_RESULTS=10
+ARXIV_LOOKBACK_DAYS=365
+
+# ===========================================
+# Convergence Engine Configuration
+# ===========================================
+# Enable/disable the convergence engine (Phase 1.5)
+# When enabled, selects stories by Impact x Convergence score
+CONVERGENCE_ENABLED=true
+
+# Number of top news items to analyze for convergence
+CONVERGENCE_TOP_N_NEWS=5
+
+# Number of arXiv categories to match per news item
+CONVERGENCE_CATEGORIES_PER_NEWS=3
+
+# Number of papers to search per matched category
+CONVERGENCE_PAPERS_PER_CATEGORY=3
+
+# Minimum cosine similarity for category matching (0-1)
+CONVERGENCE_MIN_SIMILARITY=0.35
+
+# Minimum paper relevance score to include (0-1)
+CONVERGENCE_MIN_RELEVANCE=0.4
+
+# Weight for convergence vs impact in combined score
+# Formula: combined = (1 - weight) * impact + weight * convergence
+# Default 0.6 means 60% convergence, 40% impact
+CONVERGENCE_WEIGHT=0.6
+
+# Cache TTL for taxonomy embeddings (days)
+CONVERGENCE_CACHE_TTL_DAYS=30
+
+# Embedding model for semantic similarity
+# text-embedding-3-small is cheap (~$0.00002 per 1K tokens)
 EMBEDDING_MODEL=text-embedding-3-small
 
-# -----------------------------------------------------------------------------
-# Voice Configuration
-# -----------------------------------------------------------------------------
-# OpenAI TTS voices: alloy, echo, fable, onyx, nova, shimmer
+# ===========================================
+# Podcast Branding
+# ===========================================
+PODCAST_NAME=The Agentic Ledger
+
+# ===========================================
+# Audio Settings
+# ===========================================
+TTS_MODEL=gpt-4o-mini-tts
 QUANT_VOICE=echo
 HUSTLER_VOICE=fable
+CROSSFADE_MS=200
+BG_MUSIC_VOLUME_DB=-20
 
-# -----------------------------------------------------------------------------
-# arXiv Configuration
-# -----------------------------------------------------------------------------
-# Comma-separated arXiv category codes
-# ARXIV_CATEGORIES=["cs.CR", "q-fin.TR", "cs.AI", "cs.LG"]
-# ARXIV_MAX_RESULTS=10
-# ARXIV_LOOKBACK_DAYS=365
+# ===========================================
+# Video Settings
+# ===========================================
+VIDEO_WIDTH=1080
+VIDEO_HEIGHT=1920
+MAX_DURATION_SECONDS=300
+BACKGROUND_COLOR=#1a1a2e
 
-# -----------------------------------------------------------------------------
-# Convergence Engine
-# -----------------------------------------------------------------------------
-# CONVERGENCE_ENABLED=true
-# CONVERGENCE_TOP_N_NEWS=5
-# CONVERGENCE_CATEGORIES_PER_NEWS=3
-# CONVERGENCE_MIN_SIMILARITY=0.35
-# CONVERGENCE_MIN_RELEVANCE=0.4
-# CONVERGENCE_WEIGHT=0.6
+# ===========================================
+# Subtitle Settings
+# ===========================================
+SUBTITLE_FONT=Montserrat-Bold
+SUBTITLE_FONT_SIZE=72
+# Colors in ASS BGR format (not RGB)
+QUANT_COLOR=&H00FFD700
+HUSTLER_COLOR=&H0000FF00
 
-# -----------------------------------------------------------------------------
-# Podcast Settings
-# -----------------------------------------------------------------------------
-# PODCAST_NAME=The Agentic Ledger
-# TARGET_DURATION_SECONDS=298
-# TARGET_WORD_COUNT=745
-# MAX_DURATION_SECONDS=300
+# ===========================================
+# Script Generation
+# ===========================================
+TARGET_DURATION_SECONDS=298
+TARGET_WORD_COUNT=745
+LLM_MODEL=gpt-4o
 
-# -----------------------------------------------------------------------------
-# Paths (override for Docker or custom layouts)
-# -----------------------------------------------------------------------------
-# OUTPUT_DIR=output
-# ASSETS_DIR=assets
-# TEMP_DIR=temp
+# ===========================================
+# YouTube Data API (for trending videos - legacy)
+# ===========================================
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# YOUTUBE_API_KEY=your-youtube-api-key
 
-# -----------------------------------------------------------------------------
+# YouTube Upload Settings (Phase 5 - deferred)
+# YOUTUBE_CLIENT_SECRETS_PATH=client_secrets.json
+# YOUTUBE_CREDENTIALS_PATH=youtube_credentials.json
+
+# ===========================================
 # Logging
-# -----------------------------------------------------------------------------
+# ===========================================
 LOG_LEVEL=INFO
-# GCP_PROJECT_ID=         # Optional: Enable Google Cloud Logging
-
-# -----------------------------------------------------------------------------
-# YouTube (optional, for future upload feature)
-# -----------------------------------------------------------------------------
-# YOUTUBE_API_KEY=
-# YOUTUBE_CLIENT_SECRETS_PATH=
-# YOUTUBE_CREDENTIALS_PATH=
+# GCP_PROJECT_ID=your-gcp-project-id
